<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="myFirstApp_Menu">MyFirstApp Menu</string>
    <string name="add_two_numbers">Dodawanie dwóch liczb</string>
    <string name="stop_watch">Stoper</string>
    <string name="quadratic_function">Funkcja kwadratowa</string>
    <string name="button_add">Sumuj</string>
    <string name="must_be_something">To pole nie może być puste</string>
    <string name="maximum_number_of_characters">Maksymalna ilość znaków</string>
    <string name="stop_watch_button">Uruchom stoper</string>
    <string name="end_time">Koniec czasu!!!</string>
    <string name="quadratic_function_info">Podaj argumenty funkcji ax2 + bx + c</string>
    <string name="quadratic_function_resolve">Oblicz funkcję</string>
    <string name="no_zero_value">Ten parametr nie może być równy 0</string>
    <string name="quadratic_function_resolve_for_arguments">Obliczanie wartości funkcji dla wybranego zakresu</string>
    <string name="micro_account_generator">Generator numeru mikrorachunku</string>
    <string name="quadratic_function_firstValue">Zakres od</string>
    <string name="quadratic_function_endValue">Zakres do</string>
    <string name="quadratic_function_stepFun">Krok</string>
    <string name="calculation_quadratic_function_resolve">Oblicz wartości</string>
    <string name="value_can_not_be_greater_than">Wartość nie może być większa niż</string>
    <string name="value_can_not_be_less_than">Wartość nie może być mniejsza niż</string>
    <string name="step_can_not_be_greater_than_disparity_endValue_and_firstValue">Krok nie może być większy niż różnica wartości do i od</string>
    <string name="info_about_parameters_for_micro_account">Wprowadź NIP lub PESEL</string>
    <string name="PESEL">PESEL</string>
    <string name="NIP">NIP</string>
    <string name="show_micro_account_result">Wygeneruj numer rachunku</string>

</resources>
