<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:gravity="top|center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/myFirstApp_Menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/myFirstApp_Menu"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Add_two_numbers"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/add_two_numbers" />

    <Button
        android:id="@+id/Stop_watch"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/stop_watch" />

    <Button
        android:id="@+id/Quadratic_function"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:background="@drawable/roundedbutton"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:text="@string/quadratic_function" />

    <Button
        android:id="@+id/Micro_account_generator"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:background="@drawable/roundedbutton"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:text="@string/micro_account_generator" />

</LinearLayout>