<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#009688"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstrainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textAlignment="center"
            android:text="@string/quadratic_function_resolve_for_arguments"
            android:textColor="#FFEB3B"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="#FFEB3B"
            android:textSize="14sp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"/>

        <LinearLayout
            android:id="@+id/firstValue_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:focusableInTouchMode="true"
            app:layout_constraintTop_toBottomOf="@+id/info">

            <TextView
                android:id="@+id/firstValue_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/quadratic_function_firstValue"
                android:textColor="#FFEB3B"
                android:textSize="18sp"
                android:layout_marginLeft="5dp"/>

            <EditText
                android:id="@+id/firstValue_input"
                android:layout_width="100dp"
                android:textColor="#E0F7FA"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="5"
                android:layout_marginLeft="10dp"
                android:inputType="numberDecimal|numberSigned" />

            <TextView
                android:id="@+id/firstValue_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:visibility="invisible"
                android:textColor="#FFEB3B"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/endValue_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/firstValue_LinearLayout">

            <TextView
                android:id="@+id/endValue_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/quadratic_function_endValue"
                android:textColor="#FFEB3B"
                android:textSize="18sp"
                android:layout_marginLeft="5dp"/>

            <EditText
                android:id="@+id/endValue_input"
                android:layout_width="100dp"
                android:textColor="#E0F7FA"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="5"
                android:layout_marginLeft="10dp"
                android:inputType="numberDecimal|numberSigned" />

            <TextView
                android:id="@+id/endValue_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:visibility="invisible"
                android:textColor="#FFEB3B"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/stepFun_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/endValue_LinearLayout">

            <TextView
                android:id="@+id/stepFun_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/quadratic_function_stepFun"
                android:textColor="#FFEB3B"
                android:textSize="18sp"
                android:layout_marginLeft="5dp"/>

            <EditText
                android:id="@+id/stepFun_input"
                android:layout_width="100dp"
                android:textColor="#E0F7FA"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="5"
                android:layout_marginLeft="10dp"
                android:inputType="numberDecimal|numberSigned" />

            <TextView
                android:id="@+id/stepFun_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:visibility="invisible"
                android:textColor="#FFEB3B"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>